# SDLGameEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  netset.txt
include/: Animation.hpp  ArrayInputProvider.hpp  Block.hpp  Brick.hpp  Drawable.hpp  EmptyInputProvider.hpp  Game.hpp  GameContext.hpp  GameContextSDL.cpp  GameContextSDL.hpp  GameObject.hpp  GameState.hpp  GameStateMain.hpp  GameStatePlaying.hpp  Graphics.hpp  GraphicsSDL.hpp  GroundBlock.hpp  KeyboardProvider.hpp  Log.hpp  Mushroom.hpp  Player.hpp  PlayerStateDead.hpp  PlayerStateDef.hpp  PlayerStateJump.hpp  SDLGraphics.hpp  Sprite.hpp  TextureManager.hpp  Window.hpp  WindowSDL.hpp  World.hpp
include/core/: GameContext.hpp  Graphics.hpp  Window.hpp
include/core/impl/: GameContextSDL.hpp  GraphicsSDL.hpp  WindowSDL.hpp
include/interfaces/: Drawable.hpp  EventObserver.hpp  GameState.hpp  InputProvider.cpp  InputProvider.hpp  PlayerState.hpp
include/primitives/: Color.hpp  Line.hpp  Vector2.hpp
src/: Animation.cpp  ArrayInputProvider.cpp  Block.cpp  Brick.cpp  Game.cpp  GameContext.cpp  GameContextSDL.cpp  GameObject.cpp  GameStateMain.cpp  GameStatePlaying.cpp  Graphics.cpp  GraphicsSDL.cpp  GroundBlock.cpp  KeyboardProvider.cpp  Player.cpp  PlayerState.cpp  PlayerStateDead.cpp  PlayerStateDef.cpp  PlayerStateJump.cpp  SDLGraphics.cpp  Window.cpp  WindowSDL.cpp  main.cpp
src/impl/: GameContextSDL.cpp  GraphicsSDL.cpp  WindowSDL.cpp
src/interfaces/: Drawable.cpp  GameState.cpp  InputProvider.cpp
src/primitives/: Color.cpp
